# HandlerSocket-Plugin-for-MySQL

./: Makefile.am  configure.ac
client/: Makefile.am
handlersocket/: Makefile.am  database.cpp
hsutils/: #socket.cpp#  .#socket.cpp  Makefile.am  socket.cpp
libhsclient/: Makefile.am
